# file-system

./: CMakeLists.txt  README.md
docs/: index.md  lab5.md  studio16.md  studio17.md  studio18.md  studio19.md  studio20.md  studio21.md
include/mockos/: AbstractCommand.h  AbstractFile.h  AbstractFileFactory.h  AbstractFileSystem.h  AbstractFileVisitor.h  AbstractParsingStrategy.h  BasicDisplayVisitor.h  CatCommand.h  CommandPrompt.h  CopyCommand.h  DisplayCommand.h  EditDisplayParsingStrategy.h  ImageFile.h  LSCommand.h  MacroCommand.h  MetadataDisplayVisitor.h  PasswordProxy.h  PermissionCommand.h  PermissionProxy.h  RemoveCommand.h  RenameParsingStrategy.h  SimpleFileFactory.h  SimpleFileSystem.h  TextFile.h  TouchCommand.h  enums.h
lib/: CMakeLists.txt
lib/mockos/: BasicDisplayVisitor.cpp  CMakeLists.txt  CatCommand.cpp  CommandPrompt.cpp  CopyCommand.cpp  DisplayCommand.cpp  EditDisplayParsingStrategy.cpp  ImageFile.cpp  LSCommand.cpp  MacroCommand.cpp  MetadataDisplayVisitor.cpp  PasswordProxy.cpp  PermissionCommand.cpp  PermissionProxy.cpp  RemoveCommand.cpp  RenameParsingStrategy.cpp  SimpleFileFactory.cpp  SimpleFileSystem.cpp  TextFile.cpp  TouchCommand.cpp
src/: CMakeLists.txt  Lab5.cpp  Studio16.cpp  Studio17.cpp  Studio18.cpp  Studio19.cpp  Studio20.cpp  Studio21.cpp
tests/: CMakeLists.txt  CommandTest.cpp  CommandTest.h  Lab5.cpp  README.md  Studio16.cpp  Studio17.cpp  Studio18.cpp  Studio19.cpp  Studio20.cpp  Studio21.cpp
